# Pfr-Bitsery-Asio

./: CMakeLists.txt  compile_commands.json
client/: CMakeLists.txt
client/src/: main.cpp
cmake/: FetchBitsery.cmake  FetchBoost.cmake  FetchToml11.cmake  FetchYamlCpp.cmake
server/: CMakeLists.txt
server/src/: main.cpp
shared/: CMakeLists.txt  data.h  enum.hpp  meta.h
shared/serialization/: binary.h  json.h  toml.h  yaml.h
shared/serialization/json/: pretty_print.cpp  pretty_print.h  pretty_print.hpp
